Added Double-sixes functionality

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
     margin-top: 20px;
     margin-bottom: 10px;
     position: relative;
+
 }
 
 .player-score {
@@ -152,3 +153,5 @@ i {
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+.busted {background-color: black;
+      color: white;}
