--- a/style.css
+++ b/style.css
@@ -169,11 +169,13 @@ i {
 }
 
 input[type=text] {
-  font-size: 2rem;
+  font-size: 1rem;
   font-family: inherit;
   text-align: center;
   width: 150px;
   height: 40px;
+  border-radius: 5px;
+  outline: none;
 }
 
 input[type=button] {
@@ -186,6 +188,8 @@ input[type=button] {
   border: none;
   text-transform: uppercase;
 }
+
+
 
 input[type=button]:focus{
 outline: 1px solid white;
