--- a/style.css
+++ b/style.css
@@ -187,12 +187,17 @@ input[type=button] {
   border-radius: 5px;
   border: none;
   text-transform: uppercase;
+  box-shadow: 5px 5px 5px black;
 }
 
-
+input[type=button]:hover{
+background-color: white;
+color: #EB4D4D;
+}
 
 input[type=button]:focus{
-outline: 1px solid white;
+background-color: lightgray;
+outline: none;
 }
 
 .winner { background-color: #f7f7f7; }
